--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 /*Global*/
 :root{
     --dark-blue:#363f5f;
+    --green: #49AA26;
+    --light-green: #3dd705;
+    --red: #e92929
 }
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+html{
+    font-size: 93.75%;
 }
 body{
     background: #f0f2f5;
@@ -35,15 +41,41 @@ h2{
 }
 /*Links and buttons*/
 a{
-    color: #49AA26;
+    color: var(--green);
     text-decoration:none;
 }
 a:hover{
-    color: #3dd705;
+    color: var(--light-green);
+}
+button{
+    width: 100%;
+    height: 50px;
+    border: none;
+    color: white;
+    background: var(--green);
+    padding: 0;
+    border-radius: 0.25rem;
+    cursor: pointer;
+}
+button:hover{
+    color: var(--light-green);
 }
 .button.new{
     display: inline-block;
     margin-bottom: .8rem;
+}
+.button.cancel{
+    color: var(--red);
+    border: 2px solid var(--green);
+    border-radius: 0.25rem;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: .6;
+}
+.button.cancel:hover{
+    opacity: 1;
 }
 /*Header*/
 header{
@@ -84,10 +116,14 @@ header{
    margin-top: 1rem;
 }
 .card.total{
-   background: #49AA26;
+   background: var(--green);
    color: white;
 }
 /*Table*/
+#transaction{
+    display: block;  
+    overflow-x: auto;
+}
 #data-table{
     width: 100%;
     border-spacing: 0 0.5rem;
@@ -126,10 +162,72 @@ td.income{
 td.expense{
     color: #e92929;
 }
+/*Modal*/
+.modal-overlay{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    visibility: hidden;
+}
+.modal-overlay.active{
+    opacity: 1;
+    visibility: visible;
+}
+.modal{
+    background: #F0F2F5;
+    padding: 2.4rem;
+}
+/*Form do modal*/
+#form{
+    max-width: 500px;
+
+}
+#form h2{
+    margin-top: 0;
+
+}
+input{
+    border: none;
+    border-radius: 0.2rem;
+    padding: 0.8rem;
+    width: 100%;
+}
+.input-group{
+    margin-top: 0.8rem;
+}
+.input-group small{
+    opacity: 0.4;
+}
+.input-group.actions{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.input-group.actions .button,
+.input-group.actions button{
+    width: 48%;
+}
 /*Footer*/
 footer{
     text-align: center;
     padding: 4rem 0 2rem;
     color: var(--dark-blue);
     opacity: 0.6;
+}
+/*Responsive*/
+@media(min-width:800px){
+    html{
+        font-size: 87.5%;
+    }
+    #balance{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
 }
